--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,50 +4,51 @@
 
 * {
     text-decoration: none;
-    margin:0;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Mulish' , sans-serif;
+    font-family: 'Mulish', sans-serif;
     list-style: none;
 }
 
-body{
+body {
     background: #000;
     min-height: 200vh;
 }
-.header-aside
-{
+
+.header-aside {
     display: none;
 }
-aside
-{
-   position: relative;
-   top:-10rem;   
-   height:0;
+
+aside {
+    position: relative;
+    top: -10rem;
+    height: 0;
 }
 
 
-header{
+header {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items:center;
+    align-items: center;
     transition: all ease-in-out 0.4s;
     padding: 40px 100px;
     z-index: 1199;
 
 }
+
 header.sticky {
     padding: 5px 100px;
     background: rgb(204, 202, 202);
 }
 
-header .logo{
-    position:relative;
-    font-weight:700 ;
+header .logo {
+    position: relative;
+    font-weight: 700;
     color: #fff;
     font-size: 2rem;
     text-transform: uppercase;
@@ -55,12 +56,12 @@ header .logo{
     transition: 0.6s;
 }
 
-header ul{
+header ul {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
 }
 
 header ul li {
@@ -69,7 +70,8 @@ header ul li {
     list-style: none;
 
 }
-header ul li  a {
+
+header ul li a {
     position: relative;
     margin: 0 15px;
     color: rgb(241, 235, 235);
@@ -78,42 +80,46 @@ header ul li  a {
     font-size: .99rem;
     transition: 0.6s;
 }
-    header ul li  a:hover{
-        font-weight: 800;
-        letter-spacing: .1rem;
-        transition: ease all .2s;
-        transform: perspective(.3rem);
-        text-transform: uppercase;
-        color: #a19a96;
-    }
+
+header ul li a:hover {
+    font-weight: 800;
+    letter-spacing: .1rem;
+    transition: ease all .2s;
+    transform: perspective(.3rem);
+    text-transform: uppercase;
+    color: #a19a96;
+}
 
 
 .banner {
     position: relative;
     width: 100%;
     height: 100vh;
-    background: url(../../img/backimgM.jpg) center center fixed ;
+    background: url(../../img/backimgM.jpg) center center fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity:.5;
+    opacity: .5;
 }
+
 header.sticky .logo,
 header.sticky ul li a {
     color: #3a3637;
     font-weight: 600;
 }
+
 header.sticky .logo,
- header.sticky ul li:hover
- {
+header.sticky ul li:hover {
     font-weight: 900;
     transition: ease all .2s;
     letter-spacing: .1rem;
     transform: perspective(.4rem);
     text-transform: uppercase;
-    color: #141313;   
- }
- 
- @media (min-width:501px) and (max-width:820px){
+    color: #141313;
+}
+
+/* SEÇÃO PARA DISPOSITIVOS TABLETS */
+
+@media (min-width:501px) and (max-width:820px) {
     header {
         position: fixed;
         top: 0;
@@ -126,6 +132,7 @@ header.sticky .logo,
         padding: 40px 100px;
         z-index: 1199;
     }
+
     header ul li a {
         position: relative;
         margin: 0 9px;
@@ -134,100 +141,108 @@ header.sticky .logo,
         font-weight: 22rem;
         font-size: .8rem;
         transition: 0.6s;
-        right:-1.5rem
+        right: -1.5rem
     }
+
     header .logo {
-    position: relative;
-    font-weight: 700;
-    color: #fff;
-    font-size: 1.5rem;
-    text-transform: uppercase;
-    letter-spacing: .1rem;
-    transition: 0.6s;
-}
-.banner{
-    opacity:.4;
-}
-#menu-area
-{
-    display:none;
-}
- }
-
- /* seção para dispositivos menores */
-
-
-
- @media  (max-width:541px){  
- 
- 
-    
-    .banner
-    {
-        opacity: .2;
+        position: relative;
+        font-weight: 700;
+        color: #fff;
+        font-size: 1.5rem;
+        text-transform: uppercase;
+        letter-spacing: .1rem;
+        transition: 0.6s;
     }
-    header{
-        display:none;
+
+    .banner {
+        opacity: .4;
     }
-    .banner{
+
+    #menu-area {
+        display: none;
+    }
+}
+
+/* SEÇÃO PARA DISPOSITIVOS MOBILES */
+
+
+
+@media (max-width:541px) {
+
+
+
+    .banner {
+        opacity: .3;
+    }
+
+    header {
+        display: none;
+    }
+
+    .banner {
         background-size: cover;
     }
-    
-    aside{
-        top:0;
-        right:0;
+
+    aside {
+        top: 0;
+        right: 0;
         position: fixed;
-        z-index:999;
-        display:flex;
+        z-index: 999;
+        display: flex;
     }
 
-    .logo-spot  {
-      width:70px;
-      font-size: 1.5rem;
-      right: 15.2rem;
-      margin-top:6rem;
-      color: #FFFF;
-      position: fixed;
-      
+    .logo-spot {
+        width: 70px;
+        font-size: 1.5rem;
+        right: 15.2rem;
+        margin-top: 6rem;
+        color: #FFFF;
+        position: fixed;
+
     }
-    #menu-opener{
-        font-size:2rem;
-        cursor:pointer;
-        color:#fff;
-        margin-top:16px;
-        margin-right:18px;
+
+    #menu-opener {
+        font-size: 2rem;
+        cursor: pointer;
+        color: #fff;
+        margin-top: 16px;
+        margin-right: 18px;
     }
+
     #menu-area {
-       width:0 ;
-        height:100vh;
-        background: #640a8d;
+        width: 0;
+        height: 100vh;
+        background: #13021b;
         overflow-x: hidden;
         overflow-y: auto;
-        transition:   1s;
+        transition: 1s;
         opacity: .5;
     }
-    #menu-area ul, #menu-area li {
-        padding:0;
-        position:relative;
-        top:3rem;
+
+    #menu-area ul,
+    #menu-area li {
+        padding: 0;
+        position: relative;
+        top: 3rem;
         line-height: 2.2rem;
         right: -1.3rem;
     }
 
-    #menu-area li a{
-        display:block;
-        padding:1rem;
-        cursor:pointer;
-        color:#fff;
+    #menu-area li a {
+        display: block;
+        padding: 1rem;
+        cursor: pointer;
+        color: rgb(255, 255, 255);
         font-size: 1.6rem;
         opacity: 1;
-        font-weight:bold;
+        font-weight: bold;
 
     }
-    #menu-area li a:hover{
-        color:#9298e6;
+
+    #menu-area li a:hover {
+        color: #9298e6;
         text-transform: uppercase;
     }
-    
-    
- }
+
+
+}
